--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -9,22 +9,20 @@ margin-top: 46px;
 margin-right: 48px;
 margin-bottom: 0;
 margin-left: 0;
+font-family: Inter, serif;
+display: flex;
+gap: 18px;
 }
 
 @media screen and (max-width: 980px) {
     .header__links {
-      margin-top: 46px;
       margin-right: 24px;
-      margin-bottom: 0;
-      margin-left: 0;  
     }
   }
   @media screen and (max-width: 767px) {
     .header__links {
       margin-top: 30px;
       margin-right: 16px;
-      margin-bottom: 0;
-      margin-left: 0;
       font-size: 18px;
       line-height: 20px;  
     }
