--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
   color: #FFF;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
