--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 72px;
   font-style: normal;
   font-weight: 900;
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 760px) {
   .cover__title {
-    max-width: 288px;
+    max-width: 240px;
     margin: 33px auto 0 auto;
     font-size: 32px;
     line-height: 35px;
