--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,15 +1,10 @@
 .header__link {
   color: #FFF;
   text-decoration: none;
-  margin: 0 18px 0 0;
-}
-
-.header__link:last-of-type {
-  margin: 0;
 }
 
 .header__link:hover {
-  filter:opacity(50%);
+  opacity: 0.8;
   transition: 0.5s; 
 }
 
