--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,15 +3,16 @@
   padding: 0;
   margin: 33px 0 0 0;
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 700;
   line-height: 18px;
+  width: 100%;
 }
 
 @media screen and (max-width: 760px) {
   .intro__list {
-    width: 288px;
+    max-width: 288px;
   }
 } 
