--- a/blocks/intro/__span-accent/intro__span-accent.css
+++ b/blocks/intro/__span-accent/intro__span-accent.css
@@ -1,6 +1,6 @@
 .intro__span-accent {
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
