--- a/blocks/intro/__text/intro_text.css
+++ b/blocks/intro/__text/intro_text.css
@@ -1,6 +1,6 @@
 .intro__text {
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
