--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 54px;
   font-style: normal;
   font-weight: 900;
