--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 10px;
   font-style: normal;
   font-weight: 400;
