--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
   color: #FFF;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 400;
