--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
   color: #FFF;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 96px;
   font-style: normal;
   font-weight: 900;
