--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -1,6 +1,6 @@
 .places__link {
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -10,6 +10,6 @@
 }
 
 .places__link:hover {
-  filter:opacity(50%);
+  opacity: 0.8;
   transition: 0.5s;
 }
