--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,7 +1,7 @@
 .places__paragraph {
     display: block;
     color: #FFF;
-    font-family: Inter;
+    font-family: Inter, serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -21,13 +21,6 @@
 @media screen and (max-width: 980px) {
   .places__paragraph {
     font-size: 16px;
-    margin-top: 23px;
   }
 }
 
-@media screen and (max-width: 760px) {
-  .places__paragraph {
-    font-size: 16px;
-    margin-top: 23px;
-  }
-}
