--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,6 +1,6 @@
 .places__title {
     color: #FFF;
-    font-family: Inter;
+    font-family: Inter, serif;
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
