--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -1,6 +1,6 @@
 .places__url-heading {
     color: #AAA;
-    font-family: Inter;
+    font-family: Inter, serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
