--- a/blocks/places/__URL/places__url.css
+++ b/blocks/places/__URL/places__url.css
@@ -15,9 +15,8 @@
 
   @media screen and (max-width: 760px) {
     .places__url {
-      width: 100%;
       margin: 0;
-      max-width: 288px;
+      width: 288px;
     }
   }
 
